--- a/homepage.html
+++ b/homepage.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css?family=Segoe+UI:400,700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="homepage.css">
+  <link rel="stylesheet" href="https://cdn.fontisto.com/fontisto/fontisto.css">
 </head>
 <body>
   <header>
@@ -13,28 +14,29 @@
       <img src="imgs/MPtext.png" style="height: 60px; object-fit: cover;">
       <img src="imgs/MPlogo.png" alt="Search Icon" style="height: 50px;"/>
     </div>
-    <div class="search-bar">
+   
+    <div class="header-icons"> 
+      <div class="search-bar">
       <input type="text" placeholder="Search" />
       <span class="icon">&#10005;</span>
     </div>
-    <div class="header-icons">
-      <span class="icon">&#128101;</span>
-      <span class="icon">&#128172;</span>
-      <span class="icon">&#128276;</span>
+      <span class="icon"><img src="imgs/icons/employees.svg" alt="community forum Icon" width="24" height="24"></span>
+      <span class="icon"><img src="imgs/icons/messages.svg" alt="messgae Icon" width="24" height="24"></span>
+      <span class="icon"><img src="imgs/icons/bell.svg" alt="notification Icon" width="24" height="24"></span>
       <img class="profile" src="https://randomuser.me/api/portraits/women/44.jpg" alt="Profile" />
     </div>
   </header>
   <div class="preference">
     <div class="pref-item">
-      <span class="icon">&#128188;</span>
+      <span class="icon"><img src="imgs/icons/briefcase.svg" alt="Industry Icon" width="24" height="24"></span>
       Industry
     </div>
     <div class="pref-item">
-      <span class="icon">&#128205;</span>
+      <span class="icon"><img src="imgs/icons/land-layer-location.svg" alt="Location Icon" width="24" height="24"></span>
       Location
     </div>
     <div class="pref-item">
-      <span class="icon">&#128100;</span>
+      <span class="icon"><img src="imgs/icons/employee-man-alt.svg" alt="Employer Icon" width="24" height="24"></span>
       Employer
     </div>
   </div>
@@ -109,7 +111,7 @@
     </div>
     <div class="job-description-panel" id="descPanel">
       <div class="default-logo-panel">
-        <img src="https://img.icons8.com/ios-filled/250/000000/search--v1.png" alt="Logo" />
+        <img src="imgs/MPlogo.png" alt="Logo" />
       </div>
       <div class="desc-content" tabindex="0"></div>
     </div>
