--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Services - Manggagawang Pinoy</title>
   <link rel="stylesheet" href="services.css">
-  <link rel="stylesheet" href="landingpage.css">
+  <link rel="stylesheet" href="maintheme.css">
 </head>
 <body>
   <!-- Navbar/Header -->
