--- a/services.html
+++ b/services.html
@@ -8,22 +8,25 @@
 </head>
 <body>
   <!-- Navbar/Header -->
-  <nav>
-    <div class="navbar-container">
-      <div class="nav-logo">
-        <img src="logo.png" alt="Manggagawang Pinoy Logo">
-        <span>MANGGAGAWANG PINOY</span>
-      </div>
-      <ul class="nav-links">
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Top Workers</a></li>
-        <li><a href="#">Visit Tesda</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><button class="sign-in-b">Sign in</button></li>
-        <li><button class="sign-up-b" id="wideb">Register</button></li>
-      </ul>
+<nav>
+  <div class="navbar-container">
+    <div class="nav-logo">
+      <img src="imgs/logotext.png" alt="MP Logo" id="home" />
+      <img src="imgs/logo.png" alt="MP Logo" id="home2" />
     </div>
-  </nav>
+    <ul class="nav-links" id="navLinks">
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Top Workers</a></li>
+      <li><a href="#">Visit TESDA</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><button class="sign-in-b">Sign in</button></li>
+      <li><button class="sign-up-b">Sign up</button></li>
+    </ul>
+    <div class="hamburger" id="hamburger">
+      <div></div><div></div><div></div>
+    </div>
+  </div>
+</nav>
 
   <!-- Main Content -->
   <main class="services-main">
