--- a/jobdescription.html
+++ b/jobdescription.html
@@ -123,3 +123,174 @@
 <svg width="63" height="14" viewBox="0 0 63 14" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M0.312855 11V0.818182H6.93501V2.36435H2.15732V5.12855H6.59197V6.67472H2.15732V9.45384H6.97479V11H0.312855ZM8.73722 11V3.36364H10.4574V4.66122H10.5469C10.706 4.22372 10.9695 3.88234 11.3374 3.63707C11.7053 3.38849 12.1444 3.2642 12.6548 3.2642C13.1719 3.2642 13.6077 3.39015 13.9624 3.64205C14.3203 3.89062 14.5722 4.23035 14.718 4.66122H14.7976C14.9666 4.23698 15.2517 3.89891 15.6527 3.64702C16.0571 3.39181 16.536 3.2642 17.0895 3.2642C17.7921 3.2642 18.3655 3.48627 18.8097 3.9304C19.2538 4.37453 19.4759 5.02249 19.4759 5.87429V11H17.6712V6.1527C17.6712 5.67874 17.5452 5.33239 17.2933 5.11364C17.0414 4.89157 16.7332 4.78054 16.3686 4.78054C15.9344 4.78054 15.5947 4.91643 15.3494 5.18821C15.1075 5.45668 14.9865 5.80634 14.9865 6.23722V11H13.2216V6.07812C13.2216 5.68371 13.1023 5.36884 12.8636 5.13352C12.6283 4.8982 12.3201 4.78054 11.9389 4.78054C11.6804 4.78054 11.4451 4.84683 11.233 4.9794C11.0208 5.10866 10.8518 5.29261 10.7259 5.53125C10.5999 5.76657 10.5369 6.04167 10.5369 6.35653V11H8.73722ZM21.3017 13.8636V3.36364H23.0716V4.62642H23.176C23.2688 4.44081 23.3997 4.24361 23.5687 4.0348C23.7377 3.82268 23.9664 3.64205 24.2548 3.4929C24.5431 3.34044 24.911 3.2642 25.3585 3.2642C25.9484 3.2642 26.4804 3.41501 26.9544 3.71662C27.4316 4.01491 27.8095 4.45739 28.0879 5.04403C28.3696 5.62737 28.5105 6.34328 28.5105 7.19176C28.5105 8.0303 28.3729 8.7429 28.0978 9.32955C27.8227 9.91619 27.4482 10.3636 26.9743 10.6719C26.5003 10.9801 25.9634 11.1342 25.3635 11.1342C24.926 11.1342 24.563 11.0613 24.2747 10.9155C23.9863 10.7696 23.7543 10.594 23.5787 10.3885C23.4063 10.1797 23.2721 9.98248 23.176 9.79688H23.1014V13.8636H21.3017ZM23.0666 7.18182C23.0666 7.67566 23.1362 8.10819 23.2754 8.4794C23.4179 8.85062 23.6217 9.14062 23.8869 9.34943C24.1554 9.55492 24.4802 9.65767 24.8613 9.65767C25.2591 9.65767 25.5922 9.55161 25.8606 9.33949C26.1291 9.12405 26.3313 8.83073 26.4672 8.45952C26.6064 8.08499 26.676 7.65909 26.676 7.18182C26.676 6.70786 26.608 6.28693 26.4721 5.91903C26.3362 5.55114 26.1341 5.26278 25.8656 5.05398C25.5971 4.84517 25.2624 4.74077 24.8613 4.74077C24.4769 4.74077 24.1504 4.84186 23.8819 5.04403C23.6135 5.24621 23.4096 5.52959 23.2704 5.89418C23.1345 6.25876 23.0666 6.68797 23.0666 7.18182ZM31.8514 0.818182V11H30.0517V0.818182H31.8514ZM37.033 11.1491C36.2873 11.1491 35.641 10.9851 35.0941 10.657C34.5472 10.3288 34.123 9.86979 33.8214 9.27983C33.5231 8.68987 33.3739 8.00047 33.3739 7.21165C33.3739 6.42282 33.5231 5.73177 33.8214 5.13849C34.123 4.54522 34.5472 4.08452 35.0941 3.75639C35.641 3.42827 36.2873 3.2642 37.033 3.2642C37.7788 3.2642 38.4251 3.42827 38.9719 3.75639C39.5188 4.08452 39.9414 4.54522 40.2397 5.13849C40.5413 5.73177 40.6921 6.42282 40.6921 7.21165C40.6921 8.00047 40.5413 8.68987 40.2397 9.27983C39.9414 9.86979 39.5188 10.3288 38.9719 10.657C38.4251 10.9851 37.7788 11.1491 37.033 11.1491ZM37.043 9.70739C37.4473 9.70739 37.7854 9.59635 38.0572 9.37429C38.329 9.14891 38.5311 8.8473 38.6637 8.46946C38.7996 8.09162 38.8675 7.67069 38.8675 7.20668C38.8675 6.73935 38.7996 6.31676 38.6637 5.93892C38.5311 5.55777 38.329 5.2545 38.0572 5.02912C37.7854 4.80374 37.4473 4.69105 37.043 4.69105C36.6287 4.69105 36.284 4.80374 36.0089 5.02912C35.7371 5.2545 35.5333 5.55777 35.3974 5.93892C35.2648 6.31676 35.1985 6.73935 35.1985 7.20668C35.1985 7.67069 35.2648 8.09162 35.3974 8.46946C35.5333 8.8473 35.7371 9.14891 36.0089 9.37429C36.284 9.59635 36.6287 9.70739 37.043 9.70739ZM43.0785 13.8636C42.8332 13.8636 42.6062 13.8438 42.3974 13.804C42.1919 13.7675 42.0278 13.7244 41.9052 13.6747L42.3228 12.2727C42.5846 12.349 42.8183 12.3854 43.0238 12.3821C43.2293 12.3788 43.4099 12.3142 43.5657 12.1882C43.7248 12.0656 43.859 11.8601 43.9684 11.5717L44.1225 11.1591L41.3533 3.36364H43.2624L45.0224 9.13068H45.1019L46.8668 3.36364H48.7809L45.7234 11.9247C45.5808 12.3291 45.3919 12.6754 45.1566 12.9638C44.9213 13.2554 44.6329 13.4775 44.2915 13.63C43.9535 13.7857 43.5491 13.8636 43.0785 13.8636ZM53.1472 11.1491C52.3816 11.1491 51.7203 10.9901 51.1635 10.6719C50.61 10.3504 50.1841 9.89631 49.8858 9.30966C49.5875 8.7197 49.4384 8.02533 49.4384 7.22656C49.4384 6.44105 49.5875 5.75166 49.8858 5.15838C50.1874 4.56179 50.6084 4.09777 51.1486 3.76633C51.6889 3.43158 52.3236 3.2642 53.0527 3.2642C53.5234 3.2642 53.9675 3.34044 54.3851 3.4929C54.806 3.64205 55.1773 3.87405 55.4988 4.18892C55.8236 4.50379 56.0788 4.90483 56.2644 5.39205C56.45 5.87595 56.5428 6.45265 56.5428 7.12216V7.67401H50.2836V6.46094H54.8176C54.8143 6.11624 54.7398 5.80966 54.5939 5.54119C54.4481 5.26941 54.2443 5.05563 53.9824 4.89986C53.7239 4.74408 53.4223 4.66619 53.0776 4.66619C52.7097 4.66619 52.3865 4.75568 52.1081 4.93466C51.8297 5.11032 51.6126 5.34233 51.4569 5.63068C51.3044 5.91572 51.2265 6.22893 51.2232 6.57031V7.62926C51.2232 8.07339 51.3044 8.45455 51.4668 8.77273C51.6292 9.08759 51.8562 9.32955 52.1479 9.49858C52.4396 9.6643 52.781 9.74716 53.1721 9.74716C53.4339 9.74716 53.6709 9.7107 53.883 9.63778C54.0951 9.56155 54.2791 9.45052 54.4348 9.30469C54.5906 9.15885 54.7083 8.97822 54.7878 8.76278L56.4682 8.9517C56.3622 9.39583 56.16 9.78362 55.8617 10.1151C55.5667 10.4432 55.1889 10.6984 54.7282 10.8807C54.2675 11.0597 53.7405 11.1491 53.1472 11.1491ZM58.0653 11V3.36364H59.8104V4.63636H59.8899C60.0291 4.19555 60.2678 3.85582 60.6058 3.61719C60.9472 3.37524 61.3366 3.25426 61.7741 3.25426C61.8736 3.25426 61.9846 3.25923 62.1072 3.26918C62.2332 3.2758 62.3376 3.2874 62.4205 3.30398V4.95952C62.3442 4.933 62.2232 4.9098 62.0575 4.88991C61.8951 4.86671 61.7377 4.85511 61.5852 4.85511C61.2571 4.85511 60.9621 4.92637 60.7003 5.06889C60.4418 5.2081 60.2379 5.40199 60.0888 5.65057C59.9396 5.89915 59.8651 6.18584 59.8651 6.51065V11H58.0653Z" fill="#1E1E1E"/>
 </svg>
+
+
+
+<!------------------------------------------------------------------------------------------------->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="topworkers.css"/>
+    <link rel="stylesheet" href="maintheme.css">
+</head>
+<body>
+    <nav>
+  <div class="navbar-container">
+    <div class="nav-logo">
+      <img src="imgs/MPtext.png" alt="MP Logo" id="home" />
+      <img src="imgs/MPlogo.png" alt="MP Logo" id="home2" />
+    </div>
+    <ul class="nav-links" id="navLinks">
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Top Workers</a></li>
+      <li><a href="#">Visit TESDA</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><button class="sign-in-b">Sign in</button></li>
+      <li><button class="sign-up-b">Sign up</button></li>
+    </ul>
+    <div class="hamburger" id="hamburger">
+      <div></div><div></div><div></div>
+    </div>
+  </div>
+</nav>
+
+    <div class="top-workers-table">
+  <div class="tw-header">
+    <span class="tw-col name">Name</span>
+    <span class="tw-col age">Age</span>
+    <span class="tw-col hire-rate">Hire Rate</span>
+    <span class="tw-col location">Location</span>
+    <span class="tw-col industry">Industry</span>
+    <span class="tw-col actions"></span>
+  </div>
+
+  <!-- Worker Row -->
+  <div class="tw-row">
+    <span class="tw-col name">Rogelio Ceranado Jr.</span>
+    <span class="tw-col age">56</span>
+    <span class="tw-col hire-rate">31.91%</span>
+    <span class="tw-col location">$982 782 981</span>
+    <span class="tw-col industry">Automotive</span>
+    <button class="tw-dropdown-btn" aria-label="Show details">&#9660;</button>
+  </div>
+  <div class="tw-dropdown">
+    <div class="tw-dropdown-content">
+      <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="Profile" class="tw-profile-img" />
+      <div class="tw-profile-info">
+        <strong>Rogelio Ceranado Jr.</strong>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="tw-profile-actions">
+          <a href="#" class="tw-btn tw-view-profile">View Profile</a>
+          <a href="#" class="tw-btn tw-add-fav">Add to Favorites</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Duplicate for more workers -->
+  <div class="tw-row">
+    <span class="tw-col name">Rogelio Ceranado Jr.</span>
+    <span class="tw-col age">56</span>
+    <span class="tw-col hire-rate">31.91%</span>
+    <span class="tw-col location">$982 782 981</span>
+    <span class="tw-col industry">Automotive</span>
+    <button class="tw-dropdown-btn" aria-label="Show details">&#9660;</button>
+  </div>
+  <div class="tw-dropdown">
+    <div class="tw-dropdown-content">
+      <img src="https://randomuser.me/api/portraits/men/2.jpg" alt="Profile" class="tw-profile-img" />
+      <div class="tw-profile-info">
+        <strong>Rogelio Ceranado Jr.</strong>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="tw-profile-actions">
+          <a href="#" class="tw-btn tw-view-profile">View Profile</a>
+          <a href="#" class="tw-btn tw-add-fav">Add to Favorites</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- View More Button -->
+  <div style="text-align:center;margin-top:18px;">
+    <button class="tw-view-more">View more</button>
+  </div>
+</div>
+ <footer class="footer">
+  <div class="footer-col about">
+    <img src="imgs/MPlogo.png" class="logo-placeholder">
+    <p>
+      Manggagawang Pinoy is a web-based job-matching platform designed to help blue-collar Filipino workers connect with employers.
+    </p>
+    <a href="#">Our Team</a>
+  </div>
+      <div class="footer-col contact">
+        <h4>Contact</h4>
+        <p><span class="icon"><svg width="23" height="19" viewBox="0 0 43 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M21.5 35.75C21.0819 35.75 20.7236 35.6417 20.425 35.425C20.1264 35.2083 19.9024 34.924 19.7531 34.5719C19.1858 33.0552 18.4691 31.6333 17.6031 30.3062C16.767 28.9792 15.5875 27.4219 14.0646 25.6344C12.5417 23.8469 11.3024 22.1406 10.3469 20.5156C9.42118 18.8906 8.95833 16.9271 8.95833 14.625C8.95833 11.4562 10.1677 8.775 12.5865 6.58125C15.0351 4.36042 18.0062 3.25 21.5 3.25C24.9937 3.25 27.95 4.36042 30.3687 6.58125C32.8174 8.775 34.0417 11.4562 34.0417 14.625C34.0417 17.0896 33.5191 19.1479 32.474 20.8C31.4587 22.425 30.2792 24.0365 28.9354 25.6344C27.3229 27.5844 26.0986 29.2094 25.2625 30.5094C24.4562 31.7823 23.7844 33.1365 23.2469 34.5719C23.0976 34.951 22.8587 35.249 22.5302 35.4656C22.2316 35.6552 21.8882 35.75 21.5 35.75ZM21.5 18.6875C22.7542 18.6875 23.8142 18.2948 24.6802 17.5094C25.5462 16.724 25.9792 15.7625 25.9792 14.625C25.9792 13.4875 25.5462 12.526 24.6802 11.7406C23.8142 10.9552 22.7542 10.5625 21.5 10.5625C20.2458 10.5625 19.1858 10.9552 18.3198 11.7406C17.4538 12.526 17.0208 13.4875 17.0208 14.625C17.0208 15.7625 17.4538 16.724 18.3198 17.5094C19.1858 18.2948 20.2458 18.6875 21.5 18.6875Z" fill="#1D1B20"/>
+</svg></span>MetroGate Silang Estates, Silang, Cavite</p>
+        <p><span class="icon"><svg width="16" height="16" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M33 25.3801V29.8801C33.0017 30.2979 32.9161 30.7114 32.7488 31.0942C32.5814 31.4769 32.336 31.8205 32.0281 32.1029C31.7203 32.3854 31.3569 32.6004 30.9611 32.7342C30.5654 32.868 30.1461 32.9177 29.73 32.8801C25.1143 32.3786 20.6805 30.8014 16.785 28.2751C13.1607 25.9721 10.088 22.8994 7.78501 19.2751C5.24997 15.362 3.67237 10.9066 3.18001 6.27015C3.14252 5.85535 3.19182 5.43729 3.32476 5.04258C3.4577 4.64788 3.67136 4.28518 3.95216 3.97758C4.23295 3.66997 4.57471 3.42421 4.95569 3.25593C5.33667 3.08765 5.74852 3.00054 6.16501 3.00015H10.665C11.393 2.99298 12.0987 3.25076 12.6506 3.72544C13.2026 4.20013 13.5631 4.85932 13.665 5.58015C13.8549 7.02025 14.2072 8.43424 14.715 9.79515C14.9168 10.332 14.9605 10.9155 14.8409 11.4765C14.7212 12.0374 14.4433 12.5523 14.04 12.9601L12.135 14.8651C14.2703 18.6205 17.3797 21.7298 21.135 23.8651L23.04 21.9601C23.4478 21.5569 23.9627 21.2789 24.5237 21.1593C25.0846 21.0397 25.6681 21.0833 26.205 21.2851C27.5659 21.793 28.9799 22.1452 30.42 22.3351C31.1487 22.4379 31.8141 22.805 32.2898 23.3664C32.7655 23.9278 33.0183 24.6445 33 25.3801Z" stroke="#1E1E1E" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
+</span>09275044091</p>
+        <p><span class="icon"><svg width="23" height="21" viewBox="0 0 33 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M5.5 25.8332C4.74375 25.8332 4.09063 25.5856 3.54063 25.0905C3.01354 24.5738 2.75 23.9603 2.75 23.2498V7.74984C2.75 7.03942 3.01354 6.43664 3.54063 5.9415C4.09063 5.42484 4.74375 5.1665 5.5 5.1665H27.5C28.2563 5.1665 28.8979 5.42484 29.425 5.9415C29.975 6.43664 30.25 7.03942 30.25 7.74984V23.2498C30.25 23.9603 29.975 24.5738 29.425 25.0905C28.8979 25.5856 28.2563 25.8332 27.5 25.8332H5.5ZM16.5 16.7915L27.5 10.3332V7.74984L16.5 14.2082L5.5 7.74984V10.3332L16.5 16.7915Z" fill="#1D1B20"/>
+</svg>
+</span>wongkhadleyo@gmail.com</p>
+      </div>
+      <div class="footer-col links">
+        <h4>Links</h4>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Tutorial</a></li>
+          <li><a href="#">TESDA</a></li>
+        </ul>
+      </div>
+  </footer>
+
+<script>
+// Dropdown logic for multiple rows
+document.querySelectorAll('.tw-row').forEach(function(row, idx) {
+  row.addEventListener('click', function(e) {
+    // Prevent toggling when clicking the button itself
+    if (e.target.classList.contains('tw-dropdown-btn')) {
+      e.stopPropagation();
+    }
+    // Toggle dropdown for this row
+    const dropdowns = document.querySelectorAll('.tw-dropdown');
+    const btns = document.querySelectorAll('.tw-dropdown-btn');
+    dropdowns.forEach((d, i) => {
+      if (i === idx) {
+        d.style.display = d.style.display === 'block' ? 'none' : 'block';
+        btns[i].classList.toggle('open');
+      } else {
+        d.style.display = 'none';
+        btns[i].classList.remove('open');
+      }
+    });
+  });
+});
+
+// Also toggle when clicking the dropdown button directly
+document.querySelectorAll('.tw-dropdown-btn').forEach(function(btn, idx) {
+  btn.addEventListener('click', function(e) {
+    e.stopPropagation();
+    const dropdowns = document.querySelectorAll('.tw-dropdown');
+    const btns = document.querySelectorAll('.tw-dropdown-btn');
+    dropdowns.forEach((d, i) => {
+      if (i === idx) {
+        d.style.display = d.style.display === 'block' ? 'none' : 'block';
+        btns[i].classList.toggle('open');
+      } else {
+        d.style.display = 'none';
+        btns[i].classList.remove('open');
+      }
+    });
+  });
+});
+</script>
+</body>
+</html>
