i think tapos na to

--- a/topworkers.html
+++ b/topworkers.html
@@ -84,6 +84,142 @@
     </div>
   </div>
 
+  <div class="tw-row">
+    <span class="tw-col name">Rogelio Ceranado Jr.</span>
+    <span class="tw-col age">56</span>
+    <span class="tw-col hire-rate">31.91%</span>
+    <span class="tw-col location">$982 782 981</span>
+    <span class="tw-col industry">Automotive</span>
+    <button class="tw-dropdown-btn" aria-label="Show details">&#9660;</button>
+  </div>
+  <div class="tw-dropdown">
+    <div class="tw-dropdown-content">
+      <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="Profile" class="tw-profile-img" />
+      <div class="tw-profile-info">
+        <strong>Rogelio Ceranado Jr.</strong>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="tw-profile-actions">
+          <a href="#" class="tw-btn tw-view-profile">View Profile</a>
+          <a href="#" class="tw-btn tw-add-fav">Add to Favorites</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Duplicate for more workers -->
+  <div class="tw-row">
+    <span class="tw-col name">Rogelio Ceranado Jr.</span>
+    <span class="tw-col age">56</span>
+    <span class="tw-col hire-rate">31.91%</span>
+    <span class="tw-col location">$982 782 981</span>
+    <span class="tw-col industry">Automotive</span>
+    <button class="tw-dropdown-btn" aria-label="Show details">&#9660;</button>
+  </div>
+  <div class="tw-dropdown">
+    <div class="tw-dropdown-content">
+      <img src="https://randomuser.me/api/portraits/men/2.jpg" alt="Profile" class="tw-profile-img" />
+      <div class="tw-profile-info">
+        <strong>Rogelio Ceranado Jr.</strong>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="tw-profile-actions">
+          <a href="#" class="tw-btn tw-view-profile">View Profile</a>
+          <a href="#" class="tw-btn tw-add-fav">Add to Favorites</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="tw-row">
+    <span class="tw-col name">Rogelio Ceranado Jr.</span>
+    <span class="tw-col age">56</span>
+    <span class="tw-col hire-rate">31.91%</span>
+    <span class="tw-col location">$982 782 981</span>
+    <span class="tw-col industry">Automotive</span>
+    <button class="tw-dropdown-btn" aria-label="Show details">&#9660;</button>
+  </div>
+  <div class="tw-dropdown">
+    <div class="tw-dropdown-content">
+      <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="Profile" class="tw-profile-img" />
+      <div class="tw-profile-info">
+        <strong>Rogelio Ceranado Jr.</strong>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="tw-profile-actions">
+          <a href="#" class="tw-btn tw-view-profile">View Profile</a>
+          <a href="#" class="tw-btn tw-add-fav">Add to Favorites</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Duplicate for more workers -->
+  <div class="tw-row">
+    <span class="tw-col name">Rogelio Ceranado Jr.</span>
+    <span class="tw-col age">56</span>
+    <span class="tw-col hire-rate">31.91%</span>
+    <span class="tw-col location">$982 782 981</span>
+    <span class="tw-col industry">Automotive</span>
+    <button class="tw-dropdown-btn" aria-label="Show details">&#9660;</button>
+  </div>
+  <div class="tw-dropdown">
+    <div class="tw-dropdown-content">
+      <img src="https://randomuser.me/api/portraits/men/2.jpg" alt="Profile" class="tw-profile-img" />
+      <div class="tw-profile-info">
+        <strong>Rogelio Ceranado Jr.</strong>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="tw-profile-actions">
+          <a href="#" class="tw-btn tw-view-profile">View Profile</a>
+          <a href="#" class="tw-btn tw-add-fav">Add to Favorites</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="tw-row">
+    <span class="tw-col name">Rogelio Ceranado Jr.</span>
+    <span class="tw-col age">56</span>
+    <span class="tw-col hire-rate">31.91%</span>
+    <span class="tw-col location">$982 782 981</span>
+    <span class="tw-col industry">Automotive</span>
+    <button class="tw-dropdown-btn" aria-label="Show details">&#9660;</button>
+  </div>
+  <div class="tw-dropdown">
+    <div class="tw-dropdown-content">
+      <img src="https://randomuser.me/api/portraits/men/1.jpg" alt="Profile" class="tw-profile-img" />
+      <div class="tw-profile-info">
+        <strong>Rogelio Ceranado Jr.</strong>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="tw-profile-actions">
+          <a href="#" class="tw-btn tw-view-profile">View Profile</a>
+          <a href="#" class="tw-btn tw-add-fav">Add to Favorites</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Duplicate for more workers -->
+  <div class="tw-row">
+    <span class="tw-col name">Rogelio Ceranado Jr.</span>
+    <span class="tw-col age">56</span>
+    <span class="tw-col hire-rate">31.91%</span>
+    <span class="tw-col location">$982 782 981</span>
+    <span class="tw-col industry">Automotive</span>
+    <button class="tw-dropdown-btn" aria-label="Show details">&#9660;</button>
+  </div>
+  <div class="tw-dropdown">
+    <div class="tw-dropdown-content">
+      <img src="https://randomuser.me/api/portraits/men/2.jpg" alt="Profile" class="tw-profile-img" />
+      <div class="tw-profile-info">
+        <strong>Rogelio Ceranado Jr.</strong>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="tw-profile-actions">
+          <a href="#" class="tw-btn tw-view-profile">View Profile</a>
+          <a href="#" class="tw-btn tw-add-fav">Add to Favorites</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- View More Button -->
   <div style="text-align:center;margin-top:18px;">
     <button class="tw-view-more">View more</button>
