--- a/dashboardE.html
+++ b/dashboardE.html
@@ -13,14 +13,12 @@
     <div class="nav-logo">
       <img src="imgs/MPtext.png" alt="MP Logo" id="home" />
       <img src="imgs/MPlogo.png" alt="MP Logo" id="home2" />
+      <h7>Employer Site</h7>
     </div>
     <ul class="nav-links" id="navLinks">
       <li><a href="#">Services</a></li>
       <li><a href="#">Top Workers</a></li>
-      <li><a href="#">Visit TESDA</a></li>
-      <li><a href="#">About Us</a></li>
-      <li><button class="sign-in-b">Sign in</button></li>
-      <li><button class="sign-up-b">Sign up</button></li>
+
     </ul>
     <div class="hamburger" id="hamburger">
       <div></div><div></div><div></div>
